--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@react-spring/web": "^9.7.3",
@@ -22,10 +24,12 @@
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
     "react-use": "^17.5.0",
     "tailwind-merge": "^2.2.2",
+    "yup": "^1.4.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
