--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@react-spring/web": "^9.7.3",
+    "@tanstack/react-query": "^5.28.9",
     "@types/node": "^20.11.30",
+    "axios": "^1.6.8",
     "bunshi": "^2.1.4",
     "jotai": "^2.7.1",
     "path": "^0.12.7",
