--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
+    "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.13.8",
     "react-use": "^17.5.0",
     "tailwind-merge": "^2.2.2",
     "yup": "^1.4.0",
